kubernetes/apps/flux-system/instance/app/github/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
    - name: external
      kind: Gateway
      namespace: envoy-system
      sectionName: https
  hostnames:
    - flux-webhook.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
